--- a/Ideal_Knots.ipynb
+++ b/Ideal_Knots.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "17c467ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +13,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe2dbf0",
    "metadata": {},
    "source": [
     "### Dataset\n",
     "  \n",
-    "- For each **knot-type** K in ['3_1', '4_1', '5_1', '5_2', '6_1', '6_2', '6_3', '3_1_#_3_1', '3_1_#_3_1_m', '3_1_#_4_1'] we generated a PL approximation of the smooth ideal configuration of K"
+    "- For each **knot type** K in ['3_1', '4_1', '5_1', '5_2', '6_1', '6_2', '6_3', '3_1_#_3_1', '3_1_#_3_1_m', '3_1_#_4_1'] we generated a PL approximation of the smooth ideal configuration of K"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7c17521f",
    "metadata": {},
    "outputs": [
     {
@@ -54,17 +51,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64c3069",
    "metadata": {},
    "source": [
     "#### Load configurations from the dataset\n",
-    "The load_ideal(K) functions takes as input the knot-type K (a string in IDEAL_KNOTS)"
+    "The load_ideal(K) functions takes as input the knot type K (a string in IDEAL_KNOTS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3ef0ce2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,19 +70,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddef1c34",
    "metadata": {},
    "source": [
     "#### Load the knot-cores computed from cyclic openings of each knot\n",
-    "- IDEAL_CORES is a dictionary whose keys are knot-types (strings in KNOTS) \n",
+    "- IDEAL_CORES is a dictionary whose keys are knot types (strings in KNOTS) \n",
     "\n",
-    "- IDEAL_CORES[K] is a dictionary whose keys whose keys are opening points (integers in [0, len(load_ideal(K)) -1, and whose elements are arrays containing the knot-type, and the start and ending indeces of the knot-core."
+    "- IDEAL_CORES[K] is a dictionary whose keys whose keys are opening points (integers in [0, len(load_ideal(K)) -1, and whose elements are arrays containing the knot type, and the start and ending indeces of the knot core."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "46af4b80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +89,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785b960c",
    "metadata": {},
    "source": [
     "#### Plotting functions\n",
@@ -107,19 +99,18 @@
     "- color, a string \n",
     "- label, a string\n",
     "\n",
-    "The function add_core(fig, knot, index, core, color) super-imposes the knot core correspoding to opening the curve knot at the point index. It takes as input:\n",
+    "The function add_core(fig, knot, index, core, color) superimposes the knot core correspoding to opening the curve knot at the point index. It takes as input:\n",
     "\n",
     "- fig, a go.Figure() object;\n",
     "- knot, an array\n",
     "- index, an integer\n",
-    "- core, a dictionary of knot-cores\n",
+    "- core, a dictionary of knot cores\n",
     "- color, a string \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a37091bc",
    "metadata": {},
    "outputs": [
     {
@@ -4109,13 +4100,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d5f278",
    "metadata": {},
    "source": [
     "#### Computing the knot intensity distribution\n",
     "\n",
     "The function knot_intensity(core, L) takes as input:\n",
-    "- core, a dictionary of knot-cores\n",
+    "- core, a dictionary of knot cores\n",
     "- L, an integer (the length of the knot)\n",
     "\n",
     "The outut is an array of length L\n",
@@ -4132,7 +4122,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb101c30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4142,7 +4131,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a899571d",
    "metadata": {},
    "outputs": [
     {
@@ -8822,7 +8810,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2e699f4f",
    "metadata": {},
    "outputs": [
     {
@@ -10248,7 +10235,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "af4e8874",
    "metadata": {},
    "outputs": [
     {
@@ -11343,7 +11329,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0693c7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11355,7 +11340,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -11369,7 +11354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
