--- a/Compute_knot_intensity.ipynb
+++ b/Compute_knot_intensity.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "320c893c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +12,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c2be6b0",
    "metadata": {},
    "source": [
     "### Load an example knot from random dataset\n",
@@ -24,7 +22,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "809b5462",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +30,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52770483",
    "metadata": {},
    "source": [
     "#### Computing the knot core\n",
     "\n",
-    "The funciton knot_core() requires the software Knoto-ID (Dorier, Julien, et al. \"Knoto-ID: a tool to study the entanglement of open protein chains using the concept of knotoids.\" Bioinformatics (2018)): see https://github.com/sib-swiss/Knoto-ID \n",
+    "The function knot_core() requires the software Knoto-ID (Dorier, Julien, et al. \"Knoto-ID: a tool to study the entanglement of open protein chains using the concept of knotoids.\" Bioinformatics (2018)): see https://github.com/sib-swiss/Knoto-ID \n",
     "\n",
     "#### Output\n",
     "\n",
@@ -51,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "402f9fa7",
    "metadata": {},
    "outputs": [
     {
@@ -71,18 +66,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73faf43b",
    "metadata": {},
    "source": [
     "### Computing knot core for each openings\n",
     "\n",
-    "The function Global_knot_core outputs a dictionary whose keys are opening points (integers in [0, len(knot)-1]), and whose elements are arrays containing the knot-type of the opening, and the start and ending indeces of the knot-core."
+    "The function Global_knot_core outputs a dictionary whose keys are opening points (integers in [0, len(knot)-1]), and whose elements are arrays containing the knot type of the opening, and the start and ending indices of the knot core."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a6f5d12a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +85,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "73b09263",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c4c33a",
    "metadata": {},
    "source": [
     "#### Plotting functions\n",
@@ -228,14 +219,13 @@
     "- fig, a go.Figure() object;\n",
     "- knot, an array\n",
     "- index, an integer\n",
-    "- core, a dictionary of knot-cores\n",
+    "- core, a dictionary of knot cores\n",
     "- color, a string "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b064f132",
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1609,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f7f9043",
    "metadata": {},
    "source": [
     "#### Computing the knot intensity distribution\n",
@@ -1642,7 +1631,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "07c408d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1652,7 +1640,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3c1b1417",
    "metadata": {},
    "outputs": [
     {
@@ -3371,7 +3358,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8ae7ab7e",
    "metadata": {},
    "outputs": [
     {
@@ -4375,7 +4361,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f6dcb4e9",
    "metadata": {},
    "outputs": [
     {
@@ -5469,7 +5454,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdffaf0c",
    "metadata": {},
    "source": [
     "### A different example"
@@ -5478,7 +5462,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "e1966746",
    "metadata": {},
    "outputs": [
     {
@@ -5500,7 +5483,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "da761e42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5510,7 +5492,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a7ce8170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5520,7 +5501,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f877e071",
    "metadata": {},
    "outputs": [
     {
@@ -7967,7 +7947,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "14ab472a",
    "metadata": {},
    "outputs": [
     {
@@ -9797,7 +9776,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3546b9b8",
    "metadata": {},
    "outputs": [
     {
@@ -11870,7 +11848,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1ddb74c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11882,7 +11859,7 @@
    "lastKernelId": null
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -11896,7 +11873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
